Page now more robust to resizes and zooms. Content is left col was overflowing, causing col to be pushed down. Hoping overflow:auto will fix that.

--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@ a.to_comments:before {
     #online {
         margin: 0;
         float: left;
+        overflow: auto;
     }
 
     #blog {
